# Qsfl

./: .env.example  .pre-commit-config.yaml  CLIENT_SIMULATION_SUMMARY.md  CONTRIBUTING.md  DEMONSTRATION_GUIDE.md  Dockerfile  FRONTEND_DEVELOPMENT.md  Makefile  README.md  SHOWCASE_GUIDE.md  WORKFLOW_GUIDE.md  __init__.py  demo_system_capabilities.py  docker-compose.yml  evaluation_metrics.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements-ui.txt  requirements.txt  setup.py  test_simple.py  test_ui.py  visualization_dashboard.py  working_dashboard.py
.github/workflows/: ci-cd.yml
.kiro/specs/qsfl-caad/: design.md  requirements.md  tasks.md
anomaly_detection/: __init__.py  feature_extractor.py  interfaces.py  isolation_forest_detector.py  reputation_manager.py  shap_explainer.py
auth/: __init__.py  authentication_service.py  credential_manager.py  interfaces.py  revocation_manager.py
config/: config.yaml  settings.py  ui_config.json
docs/: API_DOCUMENTATION.md  ARCHITECTURE_DIAGRAM.md  DEVELOPER_GUIDE.md  EXECUTIVE_SUMMARY.md  MENTOR_PRESENTATION_GUIDE.md  PRESENTATION_SLIDES.md  TECHNICAL_WHITEPAPER.md  TROUBLESHOOTING.md  USAGE_EXAMPLES.md
federated_learning/: __init__.py  client_simulation.py  dataset_manager.py  example_integration.py  interfaces.py  model_aggregator.py  model_update_handler.py  server.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: clients.ts  dashboard.ts
frontend/src/components/: ConnectedClients.tsx  SecurityEvents.tsx  SystemControls.tsx
frontend/src/components/Layout/: Header.tsx  Sidebar.tsx  index.tsx
frontend/src/components/charts/: AnomalyChart.tsx  ClientMap.tsx
frontend/src/components/clients/: AddClientModal.tsx  ClientCard.tsx  ClientDetailsModal.tsx
frontend/src/components/demo/: ShowcaseMode.tsx
frontend/src/components/ui/: ConfirmDialog.tsx  LoadingSpinner.tsx  MetricCard.tsx  PageHeader.tsx
frontend/src/contexts/: AuthContext.tsx  SocketContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useSocket.ts  useTheme.ts
frontend/src/pages/Analytics/: index.tsx
frontend/src/pages/Clients/: index.tsx
frontend/src/pages/Dashboard/: index.tsx
frontend/src/pages/Login/: index.tsx
frontend/src/pages/Security/: index.tsx
frontend/src/pages/Settings/: index.tsx
logs/: metrics.db
monitoring/: __init__.py  alert_manager.py  interfaces.py  metrics_collector.py  security_logger.py
pq_security/: __init__.py  dilithium.py  interfaces.py  kyber.py  manager.py
qsfl_caad/: __init__.py  client.py  system.py
qsfl_caad.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: demo_showcase.py  interactive_dashboard.py  live_demo.py  project_status.py  setup_ui.py  start_ui.py  workflow_manager.py
tests/: test_alert_integration.py  test_alert_manager.py  test_attack_simulation.py  test_authentication_service.py  test_client_simulation.py  test_credential_manager.py  test_dilithium.py  test_feature_extractor.py  test_federated_server.py  test_integration_e2e.py  test_isolation_forest_detector.py  test_kyber.py  test_metrics_collector.py  test_model_aggregator.py  test_model_update_handler.py  test_performance_benchmarks.py  test_pq_manager.py  test_reputation_manager.py  test_revocation_manager.py  test_security_logger.py  test_shap_explainer.py  test_utils.py
ui/: simple_dashboard.py  web_dashboard.py
ui/static/css/: custom.css
ui/static/js/: dashboard.js
ui/templates/: analytics.html  base.html  clients.html  dashboard.html  security.html
